--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
+
 html,
 body{
   margin: 0;
-}
+  padding: 0;
+  background: #05101c; 
+  color: white;
+  font-family: "Roboto Slab",serif;
+} 
